Make MenuItemView handle the doDefault accessibility action

Bug: 920656
Change-Id: I2b92fc73e222042632671036d6cdff09bbf81f14
Reviewed-on: https://chromium-review.googlesource.com/c/1476071
Commit-Queue: David Tseng <dtseng@chromium.org>
Auto-Submit: David Tseng <dtseng@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: Katie Dektar <katie@chromium.org>
Cr-Commit-Position: refs/heads/master@{#633954}
Former-commit-id: bda167434c16eb84afc416b6f298e591ab6e00a7