ui/views/controls/menu/menu_item_view.h
@@ -134,6 +134,7 @@ class VIEWS_EXPORT MenuItemView : public View {
   bool GetTooltipText(const gfx::Point& p,
                       base::string16* tooltip) const override;
   void GetAccessibleNodeData(ui::AXNodeData* node_data) override;
+  bool HandleAccessibleAction(const ui::AXActionData& action_data) override;
 
   // Returns the preferred height of menu items. This is only valid when the
   // menu is about to be shown.
